[package]
name = "east_agent"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.13.0", features = ["full"] }
east_core={path="../east_core"}
async-trait = "0.1.52"
lazy_static = "1.4.0"
serde = { version = "1.0.132", features = ["derive"] }
serde_json = "1.0.73"
schemars = "0.8.8"
serde_yaml = "0.8.23"