[package]
name = "east_agent"
version = "0.0.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
tokio = { version = "1.13.0", features = ["full"] }
east_core={path="../east_core"}
async-trait = "0.1.52"
lazy_static = "1.4.0"
serde = { version = "1.0.132", features = ["derive"] }
serde_json = "1.0.73"
schemars = "0.8.8"
serde_yaml = "0.8.23"
log="0.4.14"
log4rs="1.0.0"
chrono = "0.4.24"
cron-job = "0.1.0"
systemstat="0.2.3"
rsa = "0.9.2"
rand = "0.8.5"
anyhow="1.0"