[package]
name = "east_core"
version = "0.1.0"
edition = "2021"
license ="Apache 2.0"
authors = ["cedar12.zxd@qq.com"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.13.0", features = ["full"] }
async-trait = "0.1.52"
chashmap = "2.2.2"