[package]
name = "east_plugin"
version = "0.1.0"
edition = "2021"
license ="Apache 2.0"
authors = ["cedar12.zxd@qq.com"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow="1.0"
serde = { version = "1.0.132", features = ["derive"] }
serde_json = "1.0.73"