[package]
name = "east_server"
version = "0.1.0"
edition = "2021"
license ="Apache 2.0"
authors = ["cedar12.zxd@qq.com"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
strip = true 
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"


[dependencies]
tokio = { version = "1.13.0", features = ["full"] }
lazy_static = "1.4.0"
log="0.4.14"
log4rs="1.0.0"
async-trait = "0.1.52"
anyhow="1.0"
east_core={path="../east_core"}
east_plugin={path="../east_plugin"}

serde = { version = "1.0.132", features = ["derive"] }
serde_json = "1.0.73"
schemars = "0.8.8"
serde_yaml = "0.8.23"
libloading="0.7"
chrono = "0.4.24"
cron-job = "0.1.0"